force-app/main/default/objects/loan__Loan_Account__c/fields/Auto_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sale_Date__c</fullName>
    <label>Auto Sale Date</label>
    <type>Date</type>
</CustomField>