force-app/main/default/objects/loan__Loan_Account__c/fields/Borrowers_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_First_Name__c</fullName>
    <formula>loan__Account__r.Borrower_s_First_Name__c</formula>
    <label>Borrowers First Name</label>
    <type>Text</type>
</CustomField>