force-app/main/default/objects/loan__Loan_Account__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CL Contracts (Buyer)</relationshipLabel>
    <relationshipName>CL_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>