force-app/main/default/objects/loan__Loan_Account__c/fields/CPD_CSD_diff__c.field-meta.xml
<CustomField>
    <fullName>CPD_CSD_diff__c</fullName>
    <formula>$User.loan__Current_Branch_s_System_Date__c - CPD_Unpaid_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPD CSD diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>