force-app/main/default/objects/loan__Loan_Account__c/fields/CPD_Date__c.field-meta.xml
<CustomField>
    <fullName>CPD_Date__c</fullName>
    <description>The payment Date provided by the Member to change the Due date.</description>
    <label>CPD Date</label>
    <type>Date</type>
</CustomField>