force-app/main/default/objects/loan__Loan_Account__c/fields/CPD_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>CPD_Expire_Date__c</fullName>
    <description>date when the CPD reason hold expires and CPD can be performed via API</description>
    <label>CPD Expire Date</label>
    <type>Date</type>
</CustomField>