force-app/main/default/objects/loan__Loan_Account__c/fields/CPD_Reason__c.field-meta.xml
<CustomField>
    <fullName>CPD_Reason__c</fullName>
    <description>If CPD triggered from front end, this value is set with reason and to restrict CPD performed via API</description>
    <label>CPD Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed Payment Date</fullName>
            </value>
            <value>
                <fullName>Past Due or Loan Mod</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Changed via Member Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>