force-app/main/default/objects/loan__Loan_Account__c/fields/CPD_Unpaid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CPD_Unpaid_Due_Date__c</fullName>
    <label>CPD - Unpaid Due Date</label>
    <type>Date</type>
</CustomField>