force-app/main/default/objects/loan__Loan_Account__c/fields/DataAccrualFix__c.field-meta.xml
<CustomField>
    <fullName>DataAccrualFix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CLS-1375 fix</description>
    <label>DataAccrualFix</label>
    <type>Checkbox</type>
</CustomField>