force-app/main/default/objects/loan__Loan_Account__c/fields/datafixupb__c.field-meta.xml
<CustomField>
    <fullName>datafixupb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>datafixupb</label>
    <type>Checkbox</type>
</CustomField>