force-app/main/default/objects/loan__Loan_Account__c/fields/DebtSettlementPaymentsExpected__c.field-meta.xml
<CustomField>
    <fullName>DebtSettlementPaymentsExpected__c</fullName>
    <label>Debt Settlement Payments Expected</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>