force-app/main/default/objects/loan__Loan_Account__c/fields/DM_ActivateIO_and_IPT__c.field-meta.xml
<CustomField>
    <fullName>DM_ActivateIO_and_IPT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox is used while activating IO and generating IPT</description>
    <label>DM ActivateIO and IPT</label>
    <type>Checkbox</type>
</CustomField>