force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Future_LAD__c.field-meta.xml
<CustomField>
    <fullName>DM_Future_LAD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to get contracts with future LAD</description>
    <label>DM Future LAD</label>
    <type>Checkbox</type>
</CustomField>