force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Migration_Date__c</fullName>
    <label>DM Migration Date</label>
    <type>Date</type>
</CustomField>