force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Migration_Phase__c.field-meta.xml
<CustomField>
    <fullName>DM_Migration_Phase__c</fullName>
    <label>DM Migration Phase</label>
    <length>40</length>
    <type>Text</type>
</CustomField>