force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Mismatch_in_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Mismatch_in_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Mismatch in Principal</label>
    <type>Checkbox</type>
</CustomField>