force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Primary_Objects_Validation__c.field-meta.xml
<CustomField>
    <fullName>DM_Primary_Objects_Validation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Primary Objects Validation</label>
    <referenceTo>DM_Primary_Objects_Validation__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>