force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Principal_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Posted__c</fullName>
    <label>DM Principal Posted</label>
    <summarizedField>loan__Repayment_Schedule__c.loan__Due_Principal__c</summarizedField>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Posted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Repayment_Schedule__c.loan__Loan_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>