force-app/main/default/objects/loan__Loan_Account__c/fields/DM_Rescheduling_Error__c.field-meta.xml
<CustomField>
    <fullName>DM_Rescheduling_Error__c</fullName>
    <description>contains error text if repayment plan as an issue</description>
    <label>DM Rescheduling Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>