force-app/main/default/objects/loan__Loan_Account__c/fields/Effective_Date_for_AutoSale__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_for_AutoSale__c</fullName>
    <description>for assignment of investors in bulk</description>
    <label>Effective Date for AutoSale</label>
    <type>Date</type>
</CustomField>