force-app/main/default/objects/loan__Loan_Account__c/fields/Future_Bill_Pending__c.field-meta.xml
<CustomField>
    <fullName>Future_Bill_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Bill Pending</label>
    <type>Checkbox</type>
</CustomField>