force-app/main/default/objects/loan__Loan_Account__c/fields/Hardship_New_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Hardship_New_Maturity_Date__c</fullName>
    <inlineHelpText>New maturity date as a result of a loan modification.</inlineHelpText>
    <label>Hardship New Maturity Date</label>
    <type>Date</type>
</CustomField>