force-app/main/default/objects/loan__Loan_Account__c/fields/Hardship_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Request_Date__c</fullName>
    <inlineHelpText>Date member signs Loan Modification Agreement via DocuSign.</inlineHelpText>
    <label>Hardship Request Date</label>
    <type>Date</type>
</CustomField>