force-app/main/default/objects/loan__Loan_Account__c/fields/Investor_Account__c.field-meta.xml
<CustomField>
    <fullName>Investor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CL Contracts (Investor Account)</relationshipLabel>
    <relationshipName>CL_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>