force-app/main/default/objects/loan__Loan_Account__c/fields/IO_AutoSale_to_Funding_Partner__c.field-meta.xml
<CustomField>
    <fullName>IO_AutoSale_to_Funding_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be checked once the IO is sold to corresponding funding partner after loan creation</description>
    <label>IO AutoSale to Funding Partner</label>
    <type>Checkbox</type>
</CustomField>