force-app/main/default/objects/loan__Loan_Account__c/fields/IPT_Creation__c.field-meta.xml
<CustomField>
    <fullName>IPT_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPT Creation</label>
    <type>Checkbox</type>
</CustomField>