force-app/main/default/objects/loan__Loan_Account__c/fields/IR_Fixed__c.field-meta.xml
<CustomField>
    <fullName>IR_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to track the IR data fix</description>
    <label>IR_Fixed</label>
    <type>Checkbox</type>
</CustomField>