force-app/main/default/objects/loan__Loan_Account__c/fields/Last_Paid_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Paid_Due_date__c</fullName>
    <label>Last Paid Due date</label>
    <summarizedField>loan__Repayment_Schedule__c.loan__Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Billed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__isPaid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Repayment_Schedule__c.loan__Loan_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>