force-app/main/default/objects/loan__Loan_Account__c/fields/lead_Guid__c.field-meta.xml
<CustomField>
    <fullName>lead_Guid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>lead_Guid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>