force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please choose a account, which will be associated as a customer on this lending account.
You can create a new account, from the lookup window by clicking on new or select the existing account from the lookup.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>