force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Accrual_Amount_Accounted_For__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrual_Amount_Accounted_For__c</fullName>
    <label>Accrual Amount Accounted For</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>