force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Accrual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrual_Start_Date__c</fullName>
    <description>The date from which interest accrual starts</description>
    <inlineHelpText>The date from which interest accrual starts</inlineHelpText>
    <label>Accrual Start Date</label>
    <type>Date</type>
</CustomField>