force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Accrual_Stop_Indicator__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrual_Stop_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Accrual needs to be stopped.</description>
    <inlineHelpText>Indicates if the accrual has to be stopped.</inlineHelpText>
    <label>Accrual Stop Indicator</label>
    <type>Checkbox</type>
</CustomField>