force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Account_Number__c</fullName>
    <description>Account number</description>
    <label>ACH Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>