force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Bank__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ACH Bank is the bank that processes the NACHA file.</inlineHelpText>
    <label>ACH Bank</label>
    <referenceTo>loan__Bank__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>