force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Debit_Amount__c</fullName>
    <description>Debit amount</description>
    <inlineHelpText>Debit amount</inlineHelpText>
    <label>ACH Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>