force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Drawer_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Drawer_Name__c</fullName>
    <description>ACH Drawer Name</description>
    <inlineHelpText>ACH Drawer Name</inlineHelpText>
    <label>ACH Drawer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>