force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_On__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is ACH on for this account</description>
    <inlineHelpText>ACH (Automated Clearing House) is an electronic funds-transfer system. This payment system deals with payroll, direct deposit, tax refunds, consumer bills, tax payments to name a few.</inlineHelpText>
    <label>ACH</label>
    <type>Checkbox</type>
</CustomField>