force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Relationship_Type__c</fullName>
    <description>ACH relationship type</description>
    <label>ACH Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Cosigner</fullName>
            </value>
            <value>
                <fullName>Cosigner Spouse</fullName>
            </value>
            <value>
                <fullName>Cosigner2</fullName>
            </value>
            <value>
                <fullName>Cosigner2 Spouse</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>