force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Start_Date__c</fullName>
    <label>ACH Start Date</label>
    <type>Date</type>
</CustomField>