force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Active_Investor__c.field-meta.xml
<CustomField>
    <fullName>loan__Active_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked if there is an active investor on the lending account.</description>
    <inlineHelpText>This flag will becomes checked if there is any active investor on this lending account. This flag should not be changed by user manually.</inlineHelpText>
    <label>Active Investor</label>
    <type>Checkbox</type>
</CustomField>