force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Add_Fee_Amount_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>loan__Add_Fee_Amount_To_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field when selected and in conjunction with &apos;Include In Dues&apos; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</description>
    <inlineHelpText>This field when selected and in conjunction with &apos;Include In Dues&apos; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</inlineHelpText>
    <label>Add Fee Amount To Bill</label>
    <type>Checkbox</type>
</CustomField>