force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Additional_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Additional_Loan_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>This amount  is added to the total refinanced amount to get the total loan amount for a Refinance Contract.</inlineHelpText>
    <label>Additional Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>