force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Amortization_Schedule_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Amortization_Schedule_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag is set to true when the amortization schedule is successfully generated for a contract with Funding In Tranches as &apos;Yes&apos; .</inlineHelpText>
    <label>Amortization Schedule Generated</label>
    <type>Checkbox</type>
</CustomField>