force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Amount_Due_Till_Current__c.field-meta.xml
<CustomField>
    <fullName>loan__Amount_Due_Till_Current__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This includes delinquent amount + any unpaid fees on the account.</description>
    <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
    <label>Amount Due Till Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>