force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Amount_to_Current__c.field-meta.xml
<CustomField>
    <fullName>loan__Amount_to_Current__c</fullName>
    <formula>loan__Delinquent_Amount__c +   IF(loan__Delinquent_Amount__c==0, 0, loan__Fees_Remaining__c) + IF(loan__Delinquent_Amount__c==0, 0, loan__Capitalized_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
    <label>Amount to Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>