force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Auto_Create_Excess_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Auto_Create_Excess_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Excess Transaction</label>
    <type>Checkbox</type>
</CustomField>