force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Balloon_Payment__c</fullName>
    <inlineHelpText>Heavy payment at the end of a loan payment schedule.</inlineHelpText>
    <label>Balloon Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>