force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Borrower_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Borrower_ACH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Borrower ACH</description>
    <inlineHelpText>Borrower ACH</inlineHelpText>
    <label>Borrower ACH</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipName>Lending</relationshipName>
    <type>Lookup</type>
</CustomField>