force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The branch name of the loan account.</inlineHelpText>
    <label>Branch</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>