force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Cancellation_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Cancellation_Tolerance_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancellation Tolerance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>