force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Capitalization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>loan__Capitalization_Frequency__c</fullName>
    <description>This decides the frequency at which capitalization will be done</description>
    <label>Capitalization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>