force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Capitalized_Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Capitalized_Fee__c</fullName>
    <label>Fees Capitalized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>