force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Date__c</fullName>
    <inlineHelpText>Date on which the account was charged off.</inlineHelpText>
    <label>Charged Off Date</label>
    <type>Date</type>
</CustomField>