force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Client__c.field-meta.xml
<CustomField>
    <fullName>loan__Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Account Owner</description>
    <inlineHelpText>Loan Account Owner</inlineHelpText>
    <label>Client</label>
    <referenceTo>loan__Client__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>