force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Closed_Date__c</fullName>
    <inlineHelpText>The date when the loan was closed</inlineHelpText>
    <label>Paid Off Date</label>
    <type>Date</type>
</CustomField>