force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Contact__c.field-meta.xml
<CustomField>
    <fullName>loan__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please choose a contact, which will be associated as a customer on this lending account. 
You can create a new contact, from the lookup window by clicking on new or select the existing contact from the lookup.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>