force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Contract_Type__c</fullName>
    <inlineHelpText>Contract Type - New or Refinance</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>