force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Contractual_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>loan__Contractual_Due_Day__c</fullName>
    <inlineHelpText>Day on which customer will be due on billing cycle.</inlineHelpText>
    <label>Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>