force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>loan__Credit_Limit__c</fullName>
    <description>Credit Limit for Line of Credit</description>
    <inlineHelpText>This is the contractual maximum advance limit, total advance withdrawn must not exceed this limit.</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>