force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Delinquency_Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__Delinquency_Grace_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>It is the number of days for which the system will wait before categorizing the account as a delinquent account.</inlineHelpText>
    <label>Delinquency Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>