force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursal_Amount__c</fullName>
    <description>Disbursal Amount</description>
    <inlineHelpText>Amount to be disbursed to the borrower</inlineHelpText>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>