force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursal_Date__c</fullName>
    <description>Contract Date on the Loan account, this will be updated at the time of funding with the Expected Disbursal Date.</description>
    <inlineHelpText>Contract date on the loan. This will be updated at the time of funding with the expected disbursal date.</inlineHelpText>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>