force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Disbursal_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursal_Status__c</fullName>
    <description>Disbursal Status</description>
    <inlineHelpText>Loan Disbursal Status</inlineHelpText>
    <label>Disbursal Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Funding_in_Tranches__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending Disbursal</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Fully Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>